--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,6 +21,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -47,4 +48,16 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+/* Header Related */
+.Header {
+    background-color: #fff8f3;
+}
+.benner {
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.benner .profile-pic{
+    width: 500px;
 }
