--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -109,7 +109,8 @@ main {
     max-width: 1140px;
     margin: 0 auto;
 }
-main section{
+
+main section {
     margin-top: 130px;
 }
 
@@ -143,12 +144,20 @@ main section{
 
 }
 
-.skill{
+.skill {
     padding: 30px;
     border-radius: 5px;
     background: #FFF;
     box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.06);
 }
-.skill-description{
+
+.skill-description {
     color: #757575;
+}
+
+/* Resume sectoin */
+.rusume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700px;
 }
