--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -185,3 +185,11 @@ main section {
     text-align: center;
     margin-top: 50px;
 }
+
+/* Footer Style */
+footer{
+    display: flex;
+    background: #fff8f3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
