--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -68,9 +68,9 @@ nav a {
 /* Header Related */
 .Header {
     background-color: #fff8f3;
-    background-image: url('../images/header_bg.png');
+    background-image: url('../images/header_bg.png'), url('../images/developer.png') ;
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 }
 
 .benner {
